--- a/HTML/index.html
+++ b/HTML/index.html
@@ -32,7 +32,7 @@
 
             <nav> <!--Nosso menu de Belezaaaaa-->
                 <ul>
-                    <a href="#novaMulher"><li>Nasce uma nova Mulher</li></a> <!--aqui estamos usando o href, para nos referir ao os ida dentro do nosso site-->
+                    <a href="#novaMulher"><li>Nasce uma nova Mulher</li></a> <!--aqui estamos usando o href, para nos referir ao os id dentro do nosso site-->
                     <a href="#tdSobre"><li>Tudo Sobre...</li></a> <!--aq será um blog maravilhoso dos produtos da Karla Cosmetics, descrição dos ingredientes, nossa historia-->
                     <a href="#queridinhos"><li>Os queridinhos da mamãe</li></a> 
                     <a href="#fofoca"><li>Deixa te contar</li></a> <!--Depoimentos reais de mulheres como vc q amam Karla Cosmetics, e fofocas-->
