--- a/HTML/index.html
+++ b/HTML/index.html
@@ -30,7 +30,7 @@
             <h1 id="titulo">Karla Cosmetics</h1>
             <h5>Os melhores produtos de beleza!</h5>
 
-            <nav> <!--Nosso menu de Belezaaaaa-->
+            <nav> <!--tag nav define uma área de navegação-->
                 <ul>
                     <a href="#novaMulher"><li>Nasce uma nova Mulher</li></a> <!--aqui estamos usando o href, para nos referir ao os id dentro do nosso site-->
                     <a href="#tdSobre"><li>Tudo Sobre...</li></a> <!--aq será um blog maravilhoso dos produtos da Karla Cosmetics, descrição dos ingredientes, nossa historia-->
